# zar

./: .env  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  portainer-agent-stack.yml
backend/: backend.dockerfile
backend/app/: prestart.sh  pyproject.toml
backend/app/alembic/versions/: 0b840782b66f_initial_model_again.py  13eac0b0e923_vid_col_len_add_sid_to_track_call.py  18bfff6fee6c_add_number_pool_tables.py  267dcc70010a_add_event_index.py  3ac9f4cfbd89_add_from_route_cache_flag.py  83fcbeb5dcd4_trackcall_table.py  b133fdee97b8_add_host_remove_url.py
backend/app/app/: __init__.py  backend_pre_start.py  geo.py  main.py  number_pool.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: zar.py
backend/app/app/api/api_v2/: api.py
backend/app/app/api/api_v2/endpoints/: zar.py
backend/app/app/core/: config.py  logging.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: __init__.py  zar.py
backend/app/app/schemas/: __init__.py  zar.py
backend/app/app/tests/: conftest.py  test_geo.py  test_number_pool.py
backend/app/app/tests/api/api_v1/: test_endpoints.py
backend/app/app/tests/api/api_v2/: test_endpoints.py
backend/app/scripts/: test.sh
examples/vue/: .eslintrc.js  package-lock.json  package.json  vue.config.js
examples/vue/src/: App.vue  main.js  routes.js
examples/vue/src/components/: Home.vue  PageOne.vue  PageTwo.vue
examples/vue/src/utils/: updatePageTags.js
examples/vuejs/: .eslintrc.js  .prettierrc  package-lock.json  package.json  vue.config.js
examples/vuejs/public/: index.html
examples/vuejs/src/: App.vue  main.js  routes.js
examples/vuejs/src/components/: Home.vue  NumberPoolPage.vue  NumberPoolStats.vue  PageOne.vue  PageTwo.vue
frontend/: .eslintrc.js  README-tests.md  README.md  package-lock.json  package.json  vite.config.js  vitest.config.js  webpack.config.js
frontend/src/: analyticsLite.js  facebook.js  googleAnalytics4.js  plugin.js  utils.js  zar.js
frontend/test/: zar.spec.js
frontend/test/e2e/: sidContext.e2e.spec.js
scripts/: build-dev.sh  build-push.sh  build.sh  config.sh  convert.sh  deploy-portainer.sh  deploy.sh  downgrade-migration.sh  generate-migrations.sh  repair_compose.mjs  run-migrations.sh  tail-logs.sh
scripts/wrk/: page.lua  track.lua
