[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
uvicorn = "^0.30.5"
fastapi = "^0.95.0"
requests = "^2.23.0"
tenacity = "^6.1.0"
pydantic = "^1.4"
gunicorn = "^22.0.0"
jinja2 = "^2.11.2"
alembic = "^1.4.2"
sqlalchemy = "^1.3.15"
pymysql = "1.1.1"
redis = "^3.5.3"
tlbx = ">= 0.1.21"
# https://github.com/python-poetry/poetry/issues/2687
black = "^19.10b0"
orjson = "3.9.15"
rollbar = "^0.16.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
